; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl3/extr_opl3_oss.c_snd_opl3_oss_event_input.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl3/extr_opl3_oss.c_snd_opl3_oss_event_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_seq_event = type { i64 }
%struct.snd_opl3 = type { i32 }

@SNDRV_SEQ_EVENT_OSS = common dso_local global i64 0, align 8
@opl3_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_seq_event*, i32, i8*, i32, i32)* @snd_opl3_oss_event_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_opl3_oss_event_input(%struct.snd_seq_event* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.snd_seq_event*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.snd_opl3*, align 8
  store %struct.snd_seq_event* %0, %struct.snd_seq_event** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to %struct.snd_opl3*
  store %struct.snd_opl3* %13, %struct.snd_opl3** %11, align 8
  %14 = load %struct.snd_seq_event*, %struct.snd_seq_event** %6, align 8
  %15 = getelementptr inbounds %struct.snd_seq_event, %struct.snd_seq_event* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @SNDRV_SEQ_EVENT_OSS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %5
  %20 = load %struct.snd_seq_event*, %struct.snd_seq_event** %6, align 8
  %21 = load %struct.snd_opl3*, %struct.snd_opl3** %11, align 8
  %22 = getelementptr inbounds %struct.snd_opl3, %struct.snd_opl3* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @snd_midi_process_event(i32* @opl3_ops, %struct.snd_seq_event* %20, i32 %23)
  br label %25

25:                                               ; preds = %19, %5
  ret i32 0
}

declare dso_local i32 @snd_midi_process_event(i32*, %struct.snd_seq_event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
